dashboard: add footer link to Library

--- a/index.html
+++ b/index.html
@@ -1195,5 +1195,9 @@ renderLunar();
 fetchWeather();
 init();
 </script>
+
+<footer style="margin:18px auto 28px;max-width:1100px;padding:0 18px;color:#AEAEB2;font-family:system-ui;font-size:12px;">
+  <a href="./library/" style="color:#d0d0ff;text-decoration:none;">資訊資料庫（Library）</a>
+</footer>
 </body>
 </html>
