--- a/zhaojing/index.html
+++ b/zhaojing/index.html
@@ -229,56 +229,6 @@ main>div:nth-child(4){animation-delay:.24s}
 
 </main></div>
 
-
-  <!-- 電商推進（v1） -->
-  <section id="ecom" style="margin-top:22px">
-    <div class="sec-lbl">電商推進（v1）</div>
-    <div class="kpi-grid" style="grid-template-columns: repeat(3, minmax(0,1fr));">
-      <div class="kpi-card">
-        <div class="kpi-lbl">本週主推</div>
-        <div class="kpi-val" id="ecom-week">—</div>
-        <div class="kpi-sub">3–5 個主力品</div>
-      </div>
-      <div class="kpi-card">
-        <div class="kpi-lbl">獲利目標</div>
-        <div class="kpi-val" id="ecom-profit">—</div>
-        <div class="kpi-sub">毛利額/毛利率</div>
-      </div>
-      <div class="kpi-card">
-        <div class="kpi-lbl">成交引擎</div>
-        <div class="kpi-val" id="ecom-engine">—</div>
-        <div class="kpi-sub">LINE / 目錄 / 現場</div>
-      </div>
-    </div>
-
-    <div class="warn-card" style="margin-top:12px">
-      <div style="display:flex;align-items:center;gap:10px;flex-wrap:wrap">
-        <div class="t-type" style="background:rgba(255,255,255,0.06);border:1px solid var(--border)">肚肚上線期</div>
-        <div class="t-status" id="ecom-phase" style="background:rgba(255,214,102,0.12);border:1px solid rgba(255,214,102,0.35);color:#FFD666">—</div>
-        <div class="p" id="ecom-phase-date" style="color:var(--muted)">—</div>
-      </div>
-      <div id="ecom-phase-notes" class="p" style="margin-top:10px;color:var(--muted)">—</div>
-    </div>
-
-    <div class="acc-tbl" style="margin-top:12px">
-      <div class="sec-lbl" style="margin:0 0 10px 0">待決策</div>
-      <table style="width:100%;border-collapse:collapse">
-        <tr>
-          <td style="width:50%;vertical-align:top;padding-right:10px">
-            <div class="p" style="color:var(--muted)">你要決策（最多 5）</div>
-            <ul id="ecom-dec-you" style="margin:8px 0 0 18px"></ul>
-          </td>
-          <td style="width:50%;vertical-align:top;padding-left:10px;border-left:1px solid var(--border)">
-            <div class="p" style="color:var(--muted)">企業主要決策（最多 5）</div>
-            <ul id="ecom-dec-owner" style="margin:8px 0 0 18px"></ul>
-          </td>
-        </tr>
-      </table>
-    </div>
-
-    <div class="p" style="margin-top:10px;color:var(--muted)">資料來源：data/zhaojing/ecom.json（先上線，後續再加「商品毛利表」）</div>
-  </section>
-
 <div class="tab-panel" id="panel-props"><main id="main-props"><div class="loading-wrap">載入中…</div>
 
 </main></div>
@@ -288,7 +238,7 @@ main>div:nth-child(4){animation-delay:.24s}
 
 <div class="qnav">
   <div class="qnav-lbl">快速導航</div>
-  <a href="#" onclick="goEcom();return false;">電商推進</a>
+  <a href="ecom.html">電商推進</a>
   <a href="tenants.html">租客名單</a>
   <a href="property_ops.html">物業事件</a>
   <a href="../data/zhaojing/tenants.json" class="data" target="_blank">JSON: 租客</a>
@@ -296,14 +246,6 @@ main>div:nth-child(4){animation-delay:.24s}
 </div>
 
 <script>
-
-function goEcom(){
-  try{ switchTab('tasks'); }catch(e){}
-  setTimeout(()=>{
-    const el=document.getElementById('ecom');
-    if(el) el.scrollIntoView({behavior:'smooth', block:'start'});
-  }, 50);
-}
 
 function tick(){
   const e=document.getElementById("clk");if(!e)return;
