zhaojing: add shared theme css + extract global logo status ring css

--- a/zhaojing/index.html
+++ b/zhaojing/index.html
@@ -6,6 +6,7 @@
 <title>兆鯨顧問 · Open Claw</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@200;300;400;500;700&family=JetBrains+Mono:wght@300;400;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../assets/css/zhaojing-theme.css">
 <style>
 /* Theme tokens (default: dark) */
 :root{
