--- a/zhaojing/ecom.html
+++ b/zhaojing/ecom.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>兆鯨｜電商推進</title>
+  <link rel="stylesheet" href="../assets/css/zhaojing-theme.css">
   <style>
     :root{
       --bg:#0b1020;--panel:rgba(255,255,255,0.03);--panel2:rgba(255,255,255,0.02);--border:rgba(255,255,255,.08);
