zhaojing: v1 component layer (cards/table/badges) for consistent business look

--- a/zhaojing/ecom.html
+++ b/zhaojing/ecom.html
@@ -58,7 +58,7 @@
   </style>
 -->
 </head>
-<body>
+<body class="zj-scope">
 <header>
   <div class="hdr">
     <a class="back" href="./">‹ 返回兆鯨</a>
