zhaojing: fix light mode header/surfaces to use zj tokens

--- a/zhaojing/index.html
+++ b/zhaojing/index.html
@@ -230,7 +230,7 @@ main>div:nth-child(4){animation-delay:.24s}
 </style>
 -->
 </head>
-<body>
+<body class="zj-scope">
 
 <header>
   <div class="hdr-l">
